--- a/package.json
+++ b/package.json
@@ -10,12 +10,30 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/ngrok": "^4.1.0",
+    "@react-navigation/bottom-tabs": "^6.3.1",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/native-stack": "^6.6.2",
+    "@rneui/base": "^4.0.0-rc.4",
+    "@rneui/themed": "^4.0.0-rc.4",
     "expo": "~45.0.0",
+    "expo-auth-session": "~3.6.1",
+    "expo-location": "~14.2.2",
+    "expo-random": "~12.2.0",
     "expo-status-bar": "~1.3.0",
+    "expo-web-browser": "^10.2.1",
+    "native-base": "^3.4.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-web": "0.17.7"
+    "react-native-deck-swiper": "^2.0.5",
+    "react-native-maps": "0.30.2",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
+    "react-native-svg": "12.3.0",
+    "react-native-web": "0.17.7",
+    "react-spotify-web-playback": "^0.10.0",
+    "spotify-web-api-node": "^5.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
